test/trivial/bradc/defaultinit1a.good
defaultinit1a.chpl:1: In function 'main':
defaultinit1a.chpl:3: error: statement references variable 'a' before it is defined
defaultinit1a.chpl:10: note: the variable 'a' is defined here
defaultinit1a.chpl:4: error: statement references variable 'b' before it is defined
defaultinit1a.chpl:11: note: the variable 'b' is defined here
defaultinit1a.chpl:5: error: statement references variable 'c' before it is defined
defaultinit1a.chpl:12: note: the variable 'c' is defined here
defaultinit1a.chpl:6: error: statement references variable 'd' before it is defined
defaultinit1a.chpl:13: note: the variable 'd' is defined here
defaultinit1a.chpl:7: error: statement references variable 'e' before it is defined
defaultinit1a.chpl:14: note: the variable 'e' is defined here
